// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Home Page A11y I can see the skip to content link 1`] = `"सामग्री को स्किप करें"`;

exports[`Canonical Home Page Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Home Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Home Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "52",
  },
  {
    "p": "hindi.page",
  },
  {
    "x1": "[urn:bbc:tipo:topic:c6z8lgd39q7t]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-hindi]",
  },
  {
    "x4": "[hi]",
  },
  {
    "x7": "[index-home]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[BBC%20News%20हिंदी]",
  },
]
`;

exports[`Canonical Home Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, हिंदी",
  "url": "/hindi",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 2`] = `
{
  "text": "आप बीबीसी पर क्यों भरोसा कर सकते हैं",
  "url": "https://www.bbc.com/hindi/institutional-50223932",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 3`] = `
{
  "text": "इस्तेमाल की शर्तें",
  "url": "https://www.bbc.com/hindi/institutional-37342293",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 4`] = `
{
  "text": "बीबीसी के बारे में",
  "url": "https://www.bbc.com/hindi/institutional-37343168",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 5`] = `
{
  "text": "निजता की नीति",
  "url": "https://www.bbc.com/hindi/institutional-37342614",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 6`] = `
{
  "text": "कुकीज़",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 7`] = `
{
  "text": "बीबीसी से संपर्क",
  "url": "https://www.bbc.co.uk/hindi/send/u50853357",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 8`] = `
{
  "text": "अन्य भाषाएँ",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 9`] = `
{
  "text": "बाहरी साइटों का लिंक देने की हमारी नीति के बारे में पढ़ें.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Home Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/hindi"`;

exports[`Canonical Home Page Footer Paragraphs should match text 1`] = `"बीबीसी के लिए कलेक्टिव न्यूज़रूम की ओर से प्रकाशित"`;

exports[`Canonical Home Page Footer Paragraphs should match text 2`] = `"© 2025 BBC. बाहरी साइटों की सामग्री के लिए बीबीसी ज़िम्मेदार नहीं है. बाहरी साइटों का लिंक देने की हमारी नीति के बारे में पढ़ें."`;

exports[`Canonical Home Page Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, हिंदी",
  "svg": <path
    d="M1385.785 191.99c-1.89-5.595-3.885-10.439-5.963-14.533-2.085-4.093-4.393-7.471-6.922-10.133-2.523-2.662-5.338-4.636-8.417-5.929-3.093-1.292-6.568-1.946-10.425-1.946-3.163 0-5.992.445-8.48 1.335-2.495.89-4.594 2.14-6.31 3.767a16.244 16.244 0 00-3.941 5.79c-.904 2.237-1.356 4.684-1.356 7.346 0 2.669.334 5.22 1.008 7.673.598 2.168 1.564 4.385 2.69 6.63h-80.352c-2.975-4.74-6.186-9.077-9.66-12.941-3.712-4.108-7.722-7.61-12.045-10.509a55.341 55.341 0 00-13.866-6.714c-4.921-1.577-10.175-2.377-15.777-2.377-3.816 0-7.284.494-10.39 1.48-3.108.98-5.749 2.364-7.931 4.136a18.343 18.343 0 00-5.067 6.457c-1.195 2.53-1.793 5.317-1.793 8.368 0 2.39.285 4.552.869 6.485a30.65 30.65 0 002.314 5.615h-9.494v8.452h10.537v65.308h9.55v-65.308h53.433v10.126h-15.631c-3.204 0-5.86.25-7.986.758-2.12.5-4.003 1.293-5.644 2.377a12.233 12.233 0 00-3.913 4.135c-.959 1.675-1.445 3.733-1.445 6.165 0 4.553 2.008 8.493 6.026 11.809a19.096 19.096 0 00-5.387 6.137c-1.348 2.432-2.022 5.212-2.022 8.34 0 2.196.264 4.281.806 6.248.542 1.967 1.362 3.92 2.46 5.845 1.105 1.932 2.537 3.9 4.31 5.908a81.56 81.56 0 005.88 5.963c2.14 1.967 5.358 4.747 9.64 8.34l6.366-6.199c-4.67-3.746-8.25-6.79-10.738-9.147-2.489-2.356-4.38-4.378-5.672-6.074-1.293-1.703-2.21-3.343-2.752-4.92-.542-1.585-.813-3.302-.813-5.158 0-3.899 1.46-6.936 4.371-9.119 2.92-2.182 7.076-3.266 12.476-3.266 9.765 0 14.651 3.141 14.651 9.438 0 2.273-.813 4.184-2.432 5.727-1.62 1.543-4.052 2.76-7.298 3.65l3.127 7.985c5.248-1.425 9.21-3.642 11.871-6.651 2.662-3.017 3.997-6.763 3.997-11.239 0-3.28-.932-6.255-2.78-8.938-1.856-2.683-4.539-4.768-8.049-6.255-3.51-1.488-7.7-2.231-12.566-2.231-3.815 0-7.422.5-10.821 1.508-3.67-1.738-5.505-4.094-5.505-7.061 0-1.356.369-2.475 1.098-3.364.737-.883 1.717-1.488 2.926-1.794 1.217-.305 3.059-.458 5.533-.458h25.472v-18.585h82.2v11.287h-.576c-3.086 0-5.956.222-8.625.667-2.662.445-5.046 1.077-7.152 1.912-2.099.827-4.003 1.89-5.7 3.183a18.104 18.104 0 00-4.17 4.483h-33.805c-4.789 0-7.18 2.03-7.18 6.081 0 2.085.737 4.344 2.196 6.777 1.474 2.432 3.309 4.462 5.505 6.102 2.196 1.64 4.226 2.46 6.074 2.46 1.933 0 3.427-.57 4.49-1.703 1.064-1.14 1.592-2.773 1.592-4.893v-6.366h18.258c-.125 1.022-.368 1.953-.368 3.065 0 3.01.403 5.72 1.216 8.139.813 2.405 1.967 4.56 3.475 6.45 1.501 1.89 3.413 3.551 5.727 4.983 2.315 1.425 5.025 2.544 8.139 3.357 3.1.806 6.429 1.21 9.987 1.21 2.155 0 4.337-.174 6.54-.515.849 1.89 2.05 4.267 3.615 7.145a159.933 159.933 0 004.837 8.305l7.875-3.933c-3.322-4.435-6.103-8.82-8.34-13.143 2.161-.848 3.718-2.002 4.663-3.469.945-1.473 1.411-3.28 1.411-5.449 0-1.542-.382-3.016-1.154-4.427-.771-1.404-1.96-2.571-3.558-3.503-1.606-.924-3.503-1.383-5.706-1.383-2.315 0-4.212.653-5.7 1.967-1.487 1.307-2.23 3.183-2.23 5.609 0 .542.048 1.202.145 1.974a9.3 9.3 0 00.55 2.203c-1.161.111-2.141.167-2.948.167-4.17 0-7.694-.612-10.57-1.849-2.871-1.237-5.005-2.94-6.395-5.122-1.39-2.183-2.085-4.706-2.085-7.555 0-3.322.84-6.06 2.516-8.222 1.682-2.162 4.121-3.76 7.325-4.803 3.204-1.042 7.854-1.564 13.95-1.564h5.733v-19.627h27.614v65.308h9.556v-65.308h12.33v-8.452h-13.025zm-180.622 0h-11.295c-.882-1.348-1.702-2.926-2.46-4.719-.75-1.793-1.126-3.871-1.126-6.227 0-2.002.403-3.809 1.216-5.415.814-1.598 1.988-2.953 3.531-4.072 1.543-1.126 3.413-1.995 5.616-2.607 2.196-.618 4.67-.931 7.409-.931 14.206 0 27.286 8.027 39.255 23.971h-42.146zm162.962 0h-21.052c-.925-1.842-1.787-3.676-2.454-5.532-.771-2.14-1.154-4.525-1.154-7.145 0-3.517.973-6.29 2.926-8.34 1.946-2.044 4.775-3.065 8.48-3.065 2.425 0 4.635.48 6.623 1.445 1.995.966 3.85 2.433 5.588 4.4 1.738 1.967 3.378 4.469 4.921 7.5 1.543 3.03 3.072 6.609 4.573 10.737h-8.451zM759.927 265.75a4646.67 4646.67 0 00-23.49-37.242 2633.129 2633.129 0 00-23.49-36.2v73.442h-22.002V159.452h23.192a2668.556 2668.556 0 0123.713 36.052 2774.159 2774.159 0 0123.266 36.647v-72.699h22.004V265.75h-23.193zm44.26-106.298h73.145v19.03h-50.25v23.044h44.6v19.029h-44.6v26.166h53.074v19.03h-75.97V159.451zM982.1 265.75a3174.441 3174.441 0 01-9.886-35.978 3159.855 3159.855 0 01-9.44-35.977 2391.54 2391.54 0 01-9.218 35.977 2452.296 2452.296 0 01-9.812 35.978h-24.233a2032.839 2032.839 0 01-14.57-52.628c-4.66-17.74-9.069-35.63-13.231-53.67h24.976a2003.215 2003.215 0 007.88 41.33 1444.404 1444.404 0 008.77 40.586 3259.894 3259.894 0 0018.882-77.456h22.3a3251.95 3251.95 0 0018.732 75.821 1999.976 1999.976 0 008.624-39.843 1455.41 1455.41 0 007.73-40.438h24.53a1845.28 1845.28 0 01-13.23 53.67 2041.61 2041.61 0 01-14.57 52.628H982.1zm95.37 2.23c-5.849 0-11.621-.645-17.32-1.932a66.227 66.227 0 01-16.427-6.096v-20.516c10.604 6.444 21.854 9.663 33.747 9.663 6.74 0 11.869-1.138 15.388-3.419 3.517-2.28 5.277-5.45 5.277-9.515 0-3.07-.868-5.475-2.601-7.21-1.735-1.733-4.04-3.122-6.913-4.163-2.876-1.04-6.096-2.007-9.663-2.899-5.85-1.387-11.002-2.974-15.462-4.757-4.46-1.784-8.228-3.889-11.3-6.319-3.072-2.427-5.402-5.352-6.987-8.771-1.586-3.42-2.378-7.508-2.378-12.265 0-6.74 1.71-12.537 5.129-17.395 3.42-4.855 8.25-8.597 14.495-11.225 6.244-2.624 13.678-3.939 22.3-3.939 5.65 0 11.2.646 16.651 1.933 5.45 1.289 10.356 3.024 14.719 5.203v20.22c-4.363-2.677-9.292-4.758-14.793-6.245-5.5-1.487-11.027-2.23-16.577-2.23-6.046 0-10.73 1.04-14.049 3.122-3.321 2.081-4.98 5.055-4.98 8.92 0 2.776.792 4.98 2.378 6.616 1.585 1.635 3.84 2.973 6.765 4.014 2.922 1.04 6.367 2.058 10.332 3.047 5.055 1.29 9.761 2.702 14.124 4.238 4.36 1.537 8.2 3.493 11.522 5.872 3.32 2.379 5.895 5.403 7.73 9.069 1.834 3.668 2.75 8.177 2.75 13.529 0 7.038-1.735 13.06-5.202 18.063-3.47 5.006-8.475 8.823-15.016 11.447-6.541 2.626-14.421 3.94-23.639 3.94zM141.732 141.732v141.733h141.732V141.732H141.732zm98.839 100.024c-2.422 3.42-5.873 6.06-10.353 7.917-4.482 1.859-9.865 2.788-16.152 2.788h-31.763v-79.725h29.92c8.816 0 15.646 1.767 20.488 5.297 4.841 3.531 7.264 8.604 7.264 15.22 0 3.79-.867 7.08-2.602 9.868-1.735 2.787-4.3 5-7.697 6.634 4.697 1.561 8.293 4.033 10.786 7.415 2.494 3.383 3.74 7.49 3.74 12.321 0 4.758-1.21 8.847-3.631 12.265zm-20.272-38.97c2.204-1.82 3.307-4.366 3.307-7.638 0-6.317-4.302-9.477-12.901-9.477h-12.25v19.847h12.25c4.19 0 7.389-.91 9.594-2.732zm-7.534 15.22h-14.31v21.52h14.093c4.841 0 8.564-.91 11.166-2.731 2.601-1.821 3.902-4.441 3.902-7.861 0-7.285-4.95-10.928-14.851-10.928zm106.132-76.274v141.733H460.63V141.732H318.897zm98.839 100.024c-2.422 3.42-5.873 6.06-10.352 7.917-4.483 1.859-9.866 2.788-16.153 2.788h-31.763v-79.725h29.92c8.816 0 15.646 1.767 20.489 5.296 4.84 3.532 7.263 8.605 7.263 15.22 0 3.792-.867 7.081-2.602 9.869-1.735 2.787-4.3 5-7.697 6.634 4.698 1.56 8.294 4.033 10.787 7.415 2.493 3.383 3.74 7.49 3.74 12.321 0 4.758-1.211 8.847-3.632 12.265zm-20.272-38.97c2.204-1.82 3.307-4.366 3.307-7.638 0-6.317-4.301-9.477-12.9-9.477h-12.25v19.847h12.25c4.19 0 7.388-.91 9.593-2.732zm-7.534 15.22h-14.31v21.52h14.093c4.841 0 8.564-.91 11.166-2.732 2.602-1.82 3.903-4.44 3.903-7.86 0-7.285-4.951-10.928-14.852-10.928zm106.133 65.459h141.732V141.732H496.063v141.733zm101.793-36.057c-3.302 1.822-7.128 3.261-11.478 4.316-4.352 1.056-8.929 1.586-13.73 1.586-6.376 0-12.115-.93-17.216-2.787-5.103-1.858-9.416-4.536-12.941-8.033-3.527-3.498-6.228-7.777-8.103-12.842-1.875-5.063-2.813-10.766-2.813-17.105 0-6.192.974-11.784 2.926-16.776 1.95-4.99 4.763-9.271 8.44-12.842 3.675-3.569 8.083-6.301 13.222-8.197 5.138-1.893 10.896-2.841 17.274-2.841 4.425 0 8.608.456 12.547 1.366 3.938.912 7.596 2.24 10.972 3.99v15.518a36.771 36.771 0 00-10.016-4.644c-3.6-1.056-7.39-1.585-11.365-1.585-5.477 0-10.148 1.021-14.01 3.06-3.865 2.04-6.828 4.992-8.89 8.853-2.065 3.863-3.095 8.562-3.095 14.098 0 5.539.994 10.257 2.983 14.154 1.986 3.898 4.875 6.868 8.664 8.907 3.788 2.04 8.383 3.06 13.785 3.06 8.252 0 15.867-2.148 22.844-6.448v15.192z"
  />,
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 1`] = `
{
  "text": "मौजूदा पन्ना, होम पेज",
  "url": "/hindi",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 2`] = `
{
  "text": "भारत",
  "url": "/hindi/topics/ckdxnkz7607t",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 3`] = `
{
  "text": "बिहार विधानसभा चुनाव",
  "url": "/hindi/topics/c98yre1dg81t",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 4`] = `
{
  "text": "विदेश",
  "url": "/hindi/topics/c9wpm0en87xt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 5`] = `
{
  "text": "हेल्थ",
  "url": "/hindi/topics/cr50ykdx5wqt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 6`] = `
{
  "text": "मनोरंजन",
  "url": "/hindi/topics/c06gq3n0pp7t",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 7`] = `
{
  "text": "करियर",
  "url": "/hindi/topics/c95y3gjndw8t",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 8`] = `
{
  "text": "फ़ाइनेंस",
  "url": "/hindi/topics/c5qvpx5dq4qt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 9`] = `
{
  "text": "खेल",
  "url": "/hindi/topics/cwr9j8g1kj9t",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 10`] = `
{
  "text": "विज्ञान-टेक्नॉलॉजी",
  "url": "/hindi/topics/c2lej0594knt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 11`] = `
{
  "text": "सोशल",
  "url": "/hindi/topics/c2e4q0z9qznt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 12`] = `
{
  "text": "वीडियो",
  "url": "/hindi/topics/cw9kv0kpxydt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 13`] = `
{
  "text": "पॉडकास्ट",
  "url": "/hindi/topics/cv22x3pmrvmt",
}
`;

exports[`Canonical Home Page Main heading should match text 1`] = `"BBC News, हिंदी - होम पेज"`;

exports[`Canonical Home Page Most Read has item with rank 1`] = `
{
  "text": "पाकिस्तान भारत के मिसाइल हमलों को क्यों नहीं रोक पाया?",
  "url": "https://www.bbc.com/hindi/articles/cx2jgwp0je1o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 2`] = `
{
  "text": "लाहौर का एयर डिफ़ेंस सिस्टम तबाह करने का भारत का दावा, पाकिस्तान ने 25 भारतीय ड्रोन गिराने का दावा किया",
  "url": "https://www.bbc.com/hindi/articles/c365nejek65o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 3`] = `
{
  "text": "भारत-पाकिस्तान के बीच बढ़े तनाव की दुनिया भर में चर्चा, क्या कह रहा है अंतरराष्ट्रीय मीडिया?",
  "url": "https://www.bbc.com/hindi/articles/cz703jn7y2wo",
}
`;

exports[`Canonical Home Page Most Read has item with rank 4`] = `
{
  "text": "चीन क्यों नहीं चाहेगा कि भारत और पाकिस्तान के बीच युद्ध हो?",
  "url": "https://www.bbc.com/hindi/articles/cddedl5vdq4o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 5`] = `
{
  "text": "भारत का हवाई हमला: अमेरिका, इसराइल,  चीन, रूस और तुर्की  क्या बोले?",
  "url": "https://www.bbc.com/hindi/articles/c3r8rzpz881o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 6`] = `
{
  "text": "भारत ने बहावलपुर को निशाना क्यों बनाया?",
  "url": "https://www.bbc.com/hindi/articles/cgjljw6xq4jo",
}
`;

exports[`Canonical Home Page Most Read has item with rank 7`] = `
{
  "text": "कौन है द रेज़िस्टेंस फ़्रंट ग्रुप जिसका नाम पहलगाम हमले में आ रहा है?",
  "url": "https://www.bbc.com/hindi/articles/c5yq871757po",
}
`;

exports[`Canonical Home Page Most Read has item with rank 8`] = `
{
  "text": "पाकिस्तान क्या भारतीय हवाई हमले का जवाब देगा? चार बड़े सवाल",
  "url": "https://www.bbc.com/hindi/articles/cly2ypjrkp2o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 9`] = `
{
  "text": "भारत का मिसाइल और एयर डिफ़ेंस सिस्टम पाकिस्तान की तुलना में कैसा है?",
  "url": "https://www.bbc.com/hindi/articles/c9343dq12z4o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 10`] = `
{
  "text": "भारत के 'ऑपरेशन सिंदूर' पर मीडिया को जानकारी देने वाली दो महिला अधिकारी कौन हैं?",
  "url": "https://www.bbc.com/hindi/articles/c77n7zz1zg2o",
}
`;

exports[`Canonical Home Page Page content First item in the first curation is the correct headline 1`] = `"कौन है द रेज़िस्टेंस फ़्रंट ग्रुप जिसका नाम पहलगाम हमले में आ रहा है?"`;

exports[`Canonical Home Page Page content First item in the first curation is the correct image 1`] = `
<img
  alt="पहलगाम"
  class="bbc-1nl89yy"
  loading="lazy"
  src="https://ichef.bbci.co.uk/ace/ws/240/cpsprodpb/8b52/live/6c11f130-2c01-11f0-8da1-ad2bbee6cda5.jpg.webp"
  style="aspect-ratio:16 / 9"
/>
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/hindi/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Home Page SEO Canonical link 1`] = `"http://localhost:7080/hindi"`;

exports[`Canonical Home Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Home Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Home Page SEO Heading level 1 1`] = `"BBC News, हिंदी - होम पेज"`;

exports[`Canonical Home Page SEO Lang attribute 1`] = `"hi"`;

exports[`Canonical Home Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "CollectionPage",
      "headline": "ब्रेकिंग न्यूज़ समाचार, ताजा खबर | News, latest news, breaking news",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/hindi.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "hi",
        "name": "Hindi",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/hindi",
        "@type": "WebPage",
        "name": "ब्रेकिंग न्यूज़ समाचार, ताजा खबर | News, latest news, breaking news",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/hindi.png",
          "width": 1024,
        },
        "name": "BBC News हिंदी",
        "publishingPrinciples": "https://www.bbc.com/hindi/institutional-50223932",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/hindi.png",
      "url": "http://localhost:7080/hindi",
    },
    {
      "@type": "ItemList",
      "itemListElement": [
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 1,
          "url": "https://www.bbc.com/hindi/articles/c365nejek65o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 2,
          "url": "https://www.bbc.com/hindi/articles/c5yq871757po",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 3,
          "url": "https://www.bbc.com/hindi/articles/cx2jgwp0je1o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 4,
          "url": "https://www.bbc.com/hindi/live/c1memd40vk5t",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 5,
          "url": "https://www.bbc.com/hindi/articles/cgjljw6xq4jo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 6,
          "url": "https://www.bbc.com/hindi/articles/cz703jn7y2wo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 7,
          "url": "https://www.bbc.com/hindi/articles/cddedl5vdq4o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 8,
          "url": "https://www.bbc.com/hindi/articles/cly2ypjrkp2o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 9,
          "url": "https://www.bbc.com/hindi/articles/c5ygyg8j794o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 10,
          "url": "https://www.bbc.com/hindi/articles/cj6860krekgo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 11,
          "url": "https://www.bbc.com/hindi/articles/c3r8rzpz881o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 12,
          "url": "https://www.bbc.com/hindi/articles/c77n7zz1zg2o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 13,
          "url": "https://www.bbc.com/hindi/articles/c0l0lk2r0r4o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 14,
          "url": "https://www.bbc.com/hindi/articles/creqevwwrqeo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 15,
          "url": "https://www.bbc.com/hindi/articles/c9343dq12z4o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 16,
          "url": "https://www.bbc.com/hindi/articles/cx2y278l8v0o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 17,
          "url": "https://www.bbc.com/hindi/articles/cx2v2v8mldeo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 18,
          "url": "https://www.bbc.com/hindi/articles/cy5r5wn2n7wo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 19,
          "url": "https://www.bbc.com/hindi/articles/cy9vzq3pg0no",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 20,
          "url": "https://whatsapp.com/channel/0029Vaf8zY1ElagsEvZ4Gp1I",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 21,
          "url": "https://www.bbc.com/hindi/articles/cm2xp04glj3o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 22,
          "url": "https://www.bbc.com/hindi/articles/ce8g5z7x85yo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 23,
          "url": "https://www.bbc.com/hindi/articles/cedyq5y6zg3o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 24,
          "url": "https://www.bbc.com/hindi/articles/cze1ee3w4xeo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 25,
          "url": "https://www.bbc.com/hindi/articles/cgjl384z5z5o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 26,
          "url": "https://www.bbc.com/hindi/articles/ce8gkn4dkg6o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 27,
          "url": "https://www.bbc.com/hindi/articles/c209rrnl5rqo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 28,
          "url": "https://www.bbc.com/hindi/articles/c8dgzvd2rvgo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 29,
          "url": "https://www.bbc.com/hindi/articles/cx20vvrkprzo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 30,
          "url": "https://www.bbc.com/hindi/articles/c628392j6zeo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 31,
          "url": "https://www.bbc.com/hindi/articles/c2kvkx0y0d9o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 32,
          "url": "https://www.bbc.com/hindi/articles/c9djd6d2e79o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 33,
          "url": "https://www.bbc.com/hindi/articles/c0jzjqx8w3jo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 34,
          "url": "https://www.bbc.com/hindi/articles/c8x8xrkx9x1o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 35,
          "url": "https://www.bbc.com/hindi/articles/c2dedprnw75o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 36,
          "url": "https://www.bbc.com/hindi/articles/c89g9l0157wo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 37,
          "url": "https://www.bbc.com/hindi/articles/cpdzw61lpxjo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 38,
          "url": "https://www.bbc.com/hindi/bbc_hindi_tv/tv_programmes/w13xttlw",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 39,
          "url": "https://www.bbc.com/programmes/p08s9wv2",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 40,
          "url": "https://www.bbc.com/hindi/podcasts/p05525mc",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 41,
          "url": "https://www.bbc.com/hindi/podcasts/p0552909",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 42,
          "url": "https://www.bbc.com/hindi/podcasts/p0kjf03y",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 43,
          "url": "https://www.bbc.com/hindi/podcasts/p09ds7zx",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 44,
          "url": "https://www.youtube.com/playlist?list=PLYxuvEJLss6A0bxcJJ5wKJASYN_veB0Wp",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 45,
          "url": "https://www.bbc.com/hindi/articles/ce9p7dy1qd1o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 46,
          "url": "https://www.bbc.com/hindi/articles/c9djz01093po",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 47,
          "url": "https://www.bbc.com/hindi/articles/c93g38p51pzo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 48,
          "url": "https://www.bbc.com/hindi/articles/cevdvjkl2jro",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 49,
          "url": "https://www.bbc.com/hindi/articles/cgkgl6k4pxzo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 50,
          "url": "https://www.bbc.com/hindi/articles/c4grnx2kwrpo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 51,
          "url": "https://www.bbc.com/hindi/articles/cgqvwgvenxno",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 52,
          "url": "https://www.bbc.com/hindi/articles/cedy31d9192o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 53,
          "url": "https://www.bbc.com/hindi/articles/c33zg0lk31xo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 54,
          "url": "https://www.bbc.com/hindi/articles/c62xy96wy0eo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 55,
          "url": "https://www.bbc.com/hindi/articles/c9qwrjp8zpgo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 56,
          "url": "https://www.bbc.com/hindi/articles/cpq73gnr8r1o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 57,
          "url": "https://www.bbc.com/hindi/articles/czrvz25yx4ko",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 58,
          "url": "https://www.bbc.com/hindi/articles/ce8grxyd18ro",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 59,
          "url": "https://www.bbc.com/hindi/articles/ckgevrd222ko",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 60,
          "url": "https://www.bbc.com/hindi/articles/cy5r0dg461zo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 61,
          "url": "https://bit.ly/4gA4bwJ",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 62,
          "url": "https://www.facebook.com/bbchindi",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 63,
          "url": "https://x.com/BBCHindi",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 64,
          "url": "https://www.youtube.com/user/bbchindi",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 65,
          "url": "https://www.instagram.com/bbchindi/",
        },
      ],
      "name": "BBC News हिंदी",
      "numberOfItems": 65,
    },
  ],
}
`;

exports[`Canonical Home Page SEO OG description 1`] = `"हिंदी में ताज़ा समाचार, ब्रेकिंग न्यूज़, वीडियो, ऑडियो और फ़ीचर. बीबीसी हिंदी डॉटकॉम पर भारत, पाकिस्तान और चीन सहित दुनिया भर की ताज़ा ख़बरें. BBC HINDI for up-to-the-minute news, breaking news, video, audio and feature stories."`;

exports[`Canonical Home Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/hindi.png"`;

exports[`Canonical Home Page SEO OG image alt 1`] = `"BBC News हिंदी"`;

exports[`Canonical Home Page SEO OG locale 1`] = `"hi-IN"`;

exports[`Canonical Home Page SEO OG site name 1`] = `"BBC News हिंदी"`;

exports[`Canonical Home Page SEO OG title 1`] = `"ब्रेकिंग न्यूज़ समाचार, ताजा खबर | News, latest news, breaking news - BBC News हिंदी"`;

exports[`Canonical Home Page SEO OG type 1`] = `"website"`;

exports[`Canonical Home Page SEO OG url 1`] = `"http://localhost:7080/hindi"`;

exports[`Canonical Home Page SEO Page title 1`] = `"ब्रेकिंग न्यूज़ समाचार, ताजा खबर | News, latest news, breaking news - BBC News हिंदी"`;

exports[`Canonical Home Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Home Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Home Page SEO Twitter creator 1`] = `"@bbchindi"`;

exports[`Canonical Home Page SEO Twitter description 1`] = `"हिंदी में ताज़ा समाचार, ब्रेकिंग न्यूज़, वीडियो, ऑडियो और फ़ीचर. बीबीसी हिंदी डॉटकॉम पर भारत, पाकिस्तान और चीन सहित दुनिया भर की ताज़ा ख़बरें. BBC HINDI for up-to-the-minute news, breaking news, video, audio and feature stories."`;

exports[`Canonical Home Page SEO Twitter image alt 1`] = `"BBC News हिंदी"`;

exports[`Canonical Home Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/hindi.png"`;

exports[`Canonical Home Page SEO Twitter site 1`] = `"@bbchindi"`;

exports[`Canonical Home Page SEO Twitter title 1`] = `"ब्रेकिंग न्यूज़ समाचार, ताजा खबर | News, latest news, breaking news - BBC News हिंदी"`;

exports[`Canonical Home Page Timestamp should match text and date 1`] = `
{
  "date": "2025-05-08",
  "text": "8 मई 2025",
}
`;

exports[`Canonical Home Page messageBanner has a link 1`] = `"https://whatsapp.com/channel/0029Vaf8zY1ElagsEvZ4Gp1I"`;

exports[`Canonical Home Page messageBanner has an image 1`] = `
<img
  alt=""
  class="bbc-1ndjx27"
  loading="eager"
  sizes="(max-width: 37.4375rem) 184px, 224px"
  src="https://ichef.bbci.co.uk/ace/ws/224/cpsprodpb/3bc3/live/e712bd90-225e-11ef-80aa-699d54c46324.png.webp"
  srcset="https://ichef.bbci.co.uk/ace/ws/184/cpsprodpb/3bc3/live/e712bd90-225e-11ef-80aa-699d54c46324.png.webp 184w, 
                          https://ichef.bbci.co.uk/ace/ws/368/cpsprodpb/3bc3/live/e712bd90-225e-11ef-80aa-699d54c46324.png.webp 368w, 
                          https://ichef.bbci.co.uk/ace/ws/224/cpsprodpb/3bc3/live/e712bd90-225e-11ef-80aa-699d54c46324.png.webp 224w, 
                          https://ichef.bbci.co.uk/ace/ws/448/cpsprodpb/3bc3/live/e712bd90-225e-11ef-80aa-699d54c46324.png.webp 448w"
  style="aspect-ratio:16 / 9"
/>
`;
